--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#home_section">Home</a></li>
+          <li><a href="#home_section">Home Home</a></li>
           <li><a href="#movie_section">Movie</a></li>
           <li><a href="#photo_section">Photo</a></li>
           <li><a href="#documentation_section">Documentation</a></li>
