Alt virker undtagen movie

--- a/index.html
+++ b/index.html
@@ -133,17 +133,14 @@
 
 
       <section id="documentation_section">
-        <h1>DOCUMENTATION</h1>
+        <div class="text"><h1>DOCUMENTATION</h1>
 
-        <h3>Layout Diagram</h3>
+        <h3>Layout Diagram, Storyboard, B-rolls & framing</h3>
+        <br></div>
         <img src="billeder/Layout diagram.jpg" alt="Layout diagram" id="layout"/>
+        <img src="billeder/brolls_storyboard.jpeg" alt="Storyboard" id="storyboard" />
 
-        <h3>Storyboard</h3>
-        <img src="" alt="Storyboard" />
-
-        <h3>Framing</h3>
-        <img src="" alt="Drawed framning" />
-        <img src="" alt="Framing on set" />
+        <img src="billeder/framing.jpg" alt="Framing on set" id="framing" />
       </section>
     </main>
   </body>
